--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ requirements.lock
 # Directory for generated manifests
 generated/
 dist/
+keycloak-secret.yml
+postgres-secret.yml
 
 
 # =================================================================================
