--- a/k8s-manifests/keycloak/postgres-deployment.yml
+++ b/k8s-manifests/keycloak/postgres-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:latest
+          image: postgres:16.2
           ports:
             - containerPort: 5432
           env:
